welcome.lessons.welcome.bat.bool2.GreenTicket.scala.error
greenTicket:7: error: type mismatch;
 found   : Unit
 required: Int
		result = 10;
                       ^greenTicket:13: error: type mismatch;
 found   : Unit
 required: Int
		result = 20;
                       ^greenTicket:11: error: type mismatch;
 found   : Unit
 required: Int
	else if(a == b && b==c)
             ^